cmake_minimum_required(VERSION 2.8)
cmake_minimum_required(VERSION 3.1.0)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_CXX_EXTENSIONS off)
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
  add_compile_options(-Wall -Wpedantic)
endif()

project(TP3exo3)
add_executable(${PROJECT_NAME} "main.cpp" "ensemble.hh" "ensemble.cc")
